hphp/hack/test/typecheck/ffp/function_protected_bad.php
<?hh // partial
// Copyright 2004-present Facebook. All Rights Reserved.

async protected function foo(): void {
}
